[project]
authors = [{name = "Rate-Sync Contributors"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
description = "Distributed rate limiter with coordinated synchronization across services"
keywords = ["rate-limiting", "distributed-systems", "nats", "asyncio", "rate-limiter", "coordination"]
license = {text = "MIT"}
name = "rate-sync"
readme = "README.md"
requires-python = ">=3.12,<4.0"
version = "0.1.0"

[project.urls]
Changelog = "https://github.com/rate-sync/rate-sync/blob/main/CHANGELOG.md"
Documentation = "https://github.com/rate-sync/rate-sync#readme"
Homepage = "https://github.com/rate-sync/rate-sync"
Issues = "https://github.com/rate-sync/rate-sync/issues"
Repository = "https://github.com/rate-sync/rate-sync"

[tool.poetry]
packages = [{include = "ratesync", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
tomli = "^2.0.0"

# Optional dependencies for specific engines
asyncpg = {version = "^0.30.0", optional = true}
nats-py = {version = ">=2.9.0,<3.0.0", optional = true}
redis = {version = "^5.0.0", extras = ["asyncio"], optional = true}

[tool.poetry.extras]
all = ["nats-py", "asyncpg", "redis"]
nats = ["nats-py"]
postgres = ["asyncpg"]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
# For development, install all engines
asyncpg = "^0.30.0"
black = "^24.10.0"
nats-py = ">=2.9.0,<3.0.0"
pylint = "^3.3.1"
pytest = "^8.4.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
redis = {version = "^5.0.0", extras = ["asyncio"]}
ruff = "^0.14.0"
fastapi = "^0.125.0"
starlette = "^0.50.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"src/**/__main__.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pylint."MAIN"]
init-hook = "import sys; from pathlib import Path; sys.path.append(str(Path('src').resolve()))"
py-version = "3.12"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
  "postgres: marks tests that require PostgreSQL (deselect with '-m \"not postgres\"')",
  "redis: marks tests that require Redis (deselect with '-m \"not redis\"')",
  "nats: marks tests that require NATS (deselect with '-m \"not nats\"')",
  "integration: marks tests that hit real infrastructure (deselect with '-m \"not integration\"')",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
pythonpath = ["src"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core", "poetry-plugin-export"]
